fixed the relation bug and modified docs
